--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/runtime": "^7.11.0",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.2.2",
+    "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "^7.6.0",
     "jest": "^26.2.2",
     "metro-react-native-babel-preset": "^0.61.0",
