--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "flow": "flow"
   },
   "dependencies": {
     "react": "16.13.1",
@@ -22,6 +23,7 @@
     "babel-jest": "^26.2.2",
     "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "^7.6.0",
+    "flow-bin": "^0.122.0",
     "jest": "^26.2.2",
     "metro-react-native-babel-preset": "^0.61.0",
     "react-test-renderer": "16.13.1"
