--- a/package.json
+++ b/package.json
@@ -20,13 +20,18 @@
     "@babel/core": "^7.11.0",
     "@babel/runtime": "^7.11.0",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/jest": "^26.0.9",
+    "@types/react": "^16.9.46",
+    "@types/react-native": "^0.63.7",
+    "@types/react-test-renderer": "^16.9.3",
     "babel-jest": "^26.2.2",
     "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "^7.6.0",
     "flow-bin": "^0.122.0",
     "jest": "^26.2.2",
     "metro-react-native-babel-preset": "^0.61.0",
-    "react-test-renderer": "16.13.1"
+    "react-test-renderer": "16.13.1",
+    "typescript": "^3.9.7"
   },
   "jest": {
     "preset": "react-native"
