--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint .",
-    "flow": "flow"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint-fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "format": "prettier --check **/*.tsx **/*.ts *.js",
+    "format-fix": "prettier --write **/*.tsx **/*.ts *.js"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
@@ -30,12 +32,21 @@
     "@types/react": "^16.9.46",
     "@types/react-native": "^0.63.7",
     "@types/react-test-renderer": "^16.9.3",
+    "@typescript-eslint/eslint-plugin": "^3.9.0",
+    "@typescript-eslint/parser": "^3.9.0",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^26.2.2",
     "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "^7.6.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "eslint-plugin-react-native": "^3.8.1",
     "flow-bin": "^0.122.0",
     "jest": "^26.2.2",
     "metro-react-native-babel-preset": "^0.61.0",
+    "prettier": "^2.0.5",
     "react-test-renderer": "16.13.1",
     "typescript": "^3.9.7"
   },
