--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,24 +6,21 @@
     "isolatedModules": true,
     "resolveJsonModule": true,
     "jsx": "react",
-    "lib": [
-      "es6"
-    ],
+    "lib": ["es6"],
     "moduleResolution": "node",
     "noEmit": true,
     "strict": true,
     "target": "esnext",
     "baseUrl": ".",
     "paths": {
-      "@tailwind": [
-        "./tailwind"
-      ]
+      "@tailwind": ["./tailwind"]
     }
   },
   "exclude": [
-    "node_modules",
-    "babel.config.js",
-    "metro.config.js",
-    "jest.config.js"
+    "./node_modules",
+    "./babel.config.js",
+    "./metro.config.js",
+    "./jest.config.js",
+    "./tailwind.config.js"
   ]
 }
