--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.7.3",
-    "react": "16.13.1",
-    "react-native": "0.63.2",
+    "react": "^16.13.1",
+    "react-native": "^0.64.1",
     "react-native-gesture-handler": "^1.7.0",
-    "react-native-reanimated": "^1.12.0",
+    "react-native-reanimated": "^2.1.0",
+    "react-native-rename": "^2.1.5",
     "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "^2.10.1",
-    "tailwind-rn": "^1.1.1",
-    "tailwindcss": "^1.6.2"
+    "tailwind-rn": "^3.0.1",
+    "tailwindcss": "^2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.11.0",
