--- a/package.json
+++ b/package.json
@@ -44,12 +44,27 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-native": "^3.11.0",
     "flow-bin": "^0.151.0",
+    "husky": "^8.0.1",
     "jest": "^26.6.3",
+    "lint-staged": "^13.0.3",
     "metro-react-native-babel-preset": "^0.72.1",
     "prettier": "^2.7.1",
     "react-test-renderer": "18.1.0",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.3"
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": [
+      "eslint --ext .tsx --ext .ts src/ --fix"
+    ],
+    "./src/**": [
+      "prettier --write ."
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "jest": {
     "preset": "react-native",
