--- a/package.json
+++ b/package.json
@@ -12,19 +12,21 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint-fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "format": "prettier --check **/*.tsx **/*.ts *.js",
-    "format-fix": "prettier --write **/*.tsx **/*.ts *.js"
+    "format-fix": "prettier --write **/*.tsx **/*.ts *.js",
+    "check-dependencies": "rnx-dep-check",
+    "fix-dependencies": "rnx-dep-check --write"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/native": "^6.0.13",
+    "@react-native-masked-view/masked-view": "^0.2.0",
+    "@react-navigation/native": "^6.0.8",
     "nativewind": "^2.0.11",
     "react": "18.1.0",
-    "react-native": "0.70.2",
-    "react-native-gesture-handler": "^2.7.0",
+    "react-native": "^0.70.0",
+    "react-native-gesture-handler": "^2.6.0",
     "react-native-reanimated": "^2.10.0",
     "react-native-rename": "^2.1.5",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.17.0"
+    "react-native-screens": "^3.14.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -33,6 +35,7 @@
     "@commitlint/config-conventional": "^17.1.0",
     "@jamesacarr/eslint-formatter-github-actions": "^0.1.0",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@rnx-kit/dep-check": "^1.13.1",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.70.0",
@@ -71,6 +74,24 @@
       "jsx",
       "json",
       "node"
+    ]
+  },
+  "rnx-kit": {
+    "reactNativeVersion": "^0.70",
+    "kitType": "app",
+    "capabilities": [
+      "animation",
+      "babel-preset-react-native",
+      "core",
+      "core-android",
+      "core-ios",
+      "gestures",
+      "jest",
+      "navigation/native",
+      "react",
+      "react-test-renderer",
+      "safe-area",
+      "screens"
     ]
   }
 }
