--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "pre-commit": "lint-staged",
+    "postinstall": "husky install",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
@@ -10,48 +12,87 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint-fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "format": "prettier --check **/*.tsx **/*.ts *.js",
-    "format-fix": "prettier --write **/*.tsx **/*.ts *.js"
+    "format-fix": "prettier --write **/*.tsx **/*.ts *.js",
+    "check-dependencies": "rnx-dep-check",
+    "fix-dependencies": "rnx-dep-check --write"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/native": "^5.9.4",
-    "react": "^16.13.1",
-    "react-native": "^0.64.1",
-    "react-native-gesture-handler": "^1.10.3",
-    "react-native-reanimated": "^2.2.0",
-    "react-native-rename": "^2.1.5",
-    "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^3.2.0",
-    "tailwind-rn": "^3.0.1",
-    "tailwindcss": "^2.1.2"
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
+    "@react-native-masked-view/masked-view": "^0.2.8",
+    "@react-navigation/native": "^6.0.8",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "react": "18.1.0",
+    "react-native": "^0.70.0",
+    "react-native-gesture-handler": "^2.6.0",
+    "react-native-reanimated": "^2.10.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.14.1",
+    "tailwindcss": "^3.1.8",
+    "twrnc": "^3.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.3",
-    "@babel/runtime": "^7.14.0",
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
-    "@types/react": "^17.0.6",
-    "@types/react-native": "^0.64.5",
-    "@types/react-test-renderer": "^17.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.24.0",
-    "@typescript-eslint/parser": "^4.24.0",
-    "babel-eslint": "^10.1.0",
+    "@types/react-native": "^0.70.4",
+    "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
     "babel-jest": "^26.6.3",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "^7.27.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-react-native": "^3.11.0",
-    "flow-bin": "^0.151.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.9",
+    "husky": "^8.0.1",
     "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.66.0",
-    "prettier": "^2.3.0",
-    "react-test-renderer": "17.0.2",
-    "typescript": "^4.2.4"
+    "lint-staged": "^13.0.3",
+    "metro-react-native-babel-preset": "0.72.3",
+    "prettier": "^2.7.1",
+    "react-test-renderer": "18.1.0",
+    "typescript": "^4.8.3"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": [
+      "eslint --ext .tsx --ext .ts src/ --fix"
+    ],
+    "./src/**": [
+      "prettier --write ."
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "rnx-kit": {
+    "reactNativeVersion": "^0.70",
+    "kitType": "app",
+    "capabilities": [
+      "animation",
+      "babel-preset-react-native",
+      "core",
+      "core-android",
+      "core-ios",
+      "gestures",
+      "jest",
+      "navigation/native",
+      "react",
+      "react-test-renderer",
+      "safe-area",
+      "screens"
+    ]
   }
 }
