--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
     "./babel.config.js",
     "./metro.config.js",
     "./jest.config.js",
-    "./tailwind.config.js"
+    "./tailwind.config.ts"
   ]
 }
