--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,11 @@
   "prettier.singleQuote": false,
   "prettier.tabWidth": 2,
   "eslint.alwaysShowStatus": true,
-  "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"]
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact"
+  ],
+  "conventionalCommits.scopes": ["app"]
 }
