--- a/package.json
+++ b/package.json
@@ -12,46 +12,47 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint-fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "format": "prettier --check **/*.tsx **/*.ts *.js",
-    "format-fix": "prettier --write **/*.tsx **/*.ts *.js",
-    "check-dependencies": "rnx-dep-check",
-    "fix-dependencies": "rnx-dep-check --write"
+    "format-fix": "prettier --write **/*.tsx **/*.ts *.js"
   },
   "dependencies": {
-    "@commitlint/cli": "^17.1.2",
-    "@commitlint/config-conventional": "^17.1.0",
-    "@react-native-masked-view/masked-view": "^0.2.8",
-    "@react-navigation/native": "^6.0.8",
+    "@commitlint/cli": "^17.5.1",
+    "@commitlint/config-conventional": "^17.4.4",
+    "@react-native-masked-view/masked-view": "^0.2.9",
+    "@react-navigation/native": "^6.1.6",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "react": "18.1.0",
-    "react-native": "^0.70.0",
-    "react-native-gesture-handler": "^2.6.0",
-    "react-native-reanimated": "^2.10.0",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.14.1",
-    "tailwindcss": "^3.1.8",
-    "twrnc": "^3.4.0"
+    "react": "18.2.0",
+    "react-native": "0.71.6",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-reanimated": "^3.0.2",
+    "react-native-safe-area-context": "^4.5.1",
+    "react-native-screens": "^3.20.0",
+    "tailwindcss": "^3.3.1",
+    "twrnc": "^3.6.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "@react-native-community/eslint-config": "^3.2.0",
     "@tsconfig/react-native": "^2.0.2",
-    "@types/jest": "^26.0.23",
-    "@types/react-native": "^0.70.4",
+    "@types/jest": "^29.2.1",
+    "@types/react": "^18.0.24",
+    "@types/react-native": "^0.71.5",
     "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.39.0",
-    "@typescript-eslint/parser": "^5.39.0",
-    "babel-jest": "^26.6.3",
-    "eslint": "^7.32.0",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "babel-jest": "^29.2.1",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "eslint": "^8.19.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.9",
-    "husky": "^8.0.1",
-    "jest": "^26.6.3",
-    "lint-staged": "^13.0.3",
-    "metro-react-native-babel-preset": "0.72.3",
-    "prettier": "^2.7.1",
-    "react-test-renderer": "18.1.0",
-    "typescript": "^4.8.3"
+    "eslint-plugin-react": "^7.32.2",
+    "husky": "^8.0.3",
+    "jest": "^29.2.1",
+    "lint-staged": "^13.2.1",
+    "metro-react-native-babel-preset": "0.73.9",
+    "prettier": "^2.4.1",
+    "react-test-renderer": "18.2.0",
+    "typescript": "4.8.4"
   },
   "jest": {
     "preset": "react-native",
@@ -76,23 +77,5 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
-  },
-  "rnx-kit": {
-    "reactNativeVersion": "^0.70",
-    "kitType": "app",
-    "capabilities": [
-      "animation",
-      "babel-preset-react-native",
-      "core",
-      "core-android",
-      "core-ios",
-      "gestures",
-      "jest",
-      "navigation/native",
-      "react",
-      "react-test-renderer",
-      "safe-area",
-      "screens"
-    ]
   }
 }
