--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,6 @@
     "./metro.config.js",
     "./jest.config.js",
     "./tailwind.config.ts"
-  ]
+  ],
+  "extends": "@tsconfig/react-native/tsconfig.json"
 }
