--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
   "private": true,
   "scripts": {
     "pre-commit": "lint-staged",
-    "postinstall": "husky install",
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "postinstall": "husky install && npx pod-install",
+    "android:staging": "react-native run-android --variant=stagingdebug --appIdSuffix 'staging'",
+    "android:staging-release": "react-native run-android --variant=stagingrelease --appIdSuffix 'staging'",
+    "android:dev": "react-native run-android --variant=developmentdebug --appIdSuffix 'development'",
+    "android:dev-release": "react-native run-android --variant=developmentrelease --appIdSuffix 'development'",
+    "android:prod": "react-native run-android --variant=productiondebug",
+    "android:prod-release": "react-native run-android --variant=productionrelease",
+    "ios:prod": "react-native run-ios --scheme 'ReactNativeStarter'",
+    "ios:dev": "react-native run-ios --scheme 'DEVReactNativeStarter'",
+    "ios:stg": "react-native run-ios --scheme 'STGReactNativeStarter'",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
@@ -22,6 +29,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-config": "^1.5.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "^3.0.2",
     "react-native-safe-area-context": "^4.5.1",
